# qt_robot_pi

./: README.md
autostart_scripts/: start_audio.sh  start_audio.sh.save  start_microphone.sh  start_read_gestures.sh
qt_robot_gestures/: CMakeLists.txt  package.xml
qt_robot_gestures/launch/: gestures.launch
qt_robot_microphone/: package.xml  setup.py
qt_robot_microphone/launch/: microphone.launch
qt_robot_microphone/scripts/: .microphone_input.py.swp  microphone_input.py
qt_robot_pi/qt_robot_microphone/scripts/: microphone_input.py
qt_robot_pi/qt_robot_speaker/: CMakeLists.txt  package.xml
qt_robot_pi/qt_robot_speaker/scripts/: speaker_output.py
qt_robot_pi_ws/qt_robot_gestures/: setup.py
qt_robot_pi_ws/qt_robot_gestures/scripts/: gestures.py
qt_robot_pi_ws/qt_robot_microphone/: CMakeLists.txt
qt_robot_pi_ws/qt_robot_speaker/: CMakeLists.txt  package.xml
qt_robot_pi_ws/qt_robot_speaker/launch/: speaker.launch  test.launch
qt_robot_pi_ws/qt_robot_speaker/msg/: PlayRequest.msg
qt_robot_pi_ws/qt_robot_speaker/scripts/: speaker_output.py  test_speaker.py
qt_robot_pi_ws/qt_robot_speaker/srv/: PlayAudio.srv
qt_robot_read_gesture/: CMakeLists.txt  package.xml  setup.py
qt_robot_read_gesture/launch/: read_gestures.launch
qt_robot_read_gesture/scripts/: read_gestures.py
qt_robot_speaker/: setup.py
qt_robot_speaker/launch/: test.launch
qt_robot_speaker/scripts/: speaker_output.py
scripts/: .microphone_input.py.swo  microphone_input.py
