<package>
  <name>qt_robot_gestures</name>
  <version>0.1.2</version>
  <description >

     Interface to use QTRobot Gestures

  </description>
  <author>Elaine Short</author>
  <maintainer email="micol.spitale@gmail.com">Micol Spitale</maintainer>
  <license>GPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>


