<package>
  <name>qt_robot_microphone</name>
  <version>0.1.2</version>
  <description >

     Interface to use CoRDial with Amazon Lex Services

  </description>
  <author>Elaine Short</author>
  <maintainer email="micol.spitale@gmail.com">Micol Spitale</maintainer>
  <license>GPL</license>
  <url>http://ros.org/wiki/qt_robot_microphone</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>


